# rogue-asteroids

./: .gitignore  Cargo.toml  index.html  rogue_asteroids.d.ts  rogue_asteroids.js  rogue_asteroids_bg.wasm.d.ts
.github/workflows/: build-and-deploy.yml
src/: lib.rs  main.rs  util.rs
src/components/: chunk.rs  mod.rs  ship.rs  types.rs
src/entities/: asteroid.rs  bullet.rs  entity.rs  mod.rs  ship.rs
src/systems/: common.rs  mod.rs  player.rs  ship.rs
wasm/: package.json  rogue_asteroids.js
